--- a/.github/workflows/k6-tests.yml
+++ b/.github/workflows/k6-tests.yml
@@ -17,8 +17,7 @@ jobs:
         uses: grafana/setup-k6-action@v1
 
       - name: Executar testes k6
-        run: |
-          k6 run --summary-export=summary.json tests/*.js
+        run: k6 run jsonplaceholder-api-k6-tests.js
 
       - name: Upload do relatório
         if: always()
