--- a/.github/workflows/k6-tests.yml
+++ b/.github/workflows/k6-tests.yml
@@ -13,14 +13,22 @@ jobs:
       - name: Checkout do código
         uses: actions/checkout@v4
 
-      - name: Setup k6
-        uses: grafana/setup-k6-action@v1
+      - name: Instalar k6
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y gnupg software-properties-common
+          curl -fsSL https://dl.k6.io/key.gpg | sudo gpg --dearmor -o /usr/share/keyrings/k6-archive-keyring.gpg
+          echo "deb [signed-by=/usr/share/keyrings/k6-archive-keyring.gpg] https://dl.k6.io/deb stable main" | sudo tee /etc/apt/sources.list.d/k6.list
+          sudo apt-get update
+          sudo apt-get install k6
 
       - name: Executar testes k6
-        run: k6 run jsonplaceholder-api-k6-tests.js
+        run: |
+          k6 run \
+            --summary-export=summary.json \
+            jsonplaceholder-api-k6-tests.js
 
-      - name: Upload do relatório
-        if: always()
+      - name: Upload do resumo k6
         uses: actions/upload-artifact@v4
         with:
           name: k6-summary
